force-app/main/default/objects/Asset/fields/VBOT_Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <description>Firmware version currently running on the asset. Displayed in the Connected Asset header.</description>
    <inlineHelpText>Semantic version string, e.g. "3.4.1".</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>