force-app/main/default/objects/Asset/fields/VBOT_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Last_Sync__c</fullName>
    <label>Last Sync</label>
    <description>Timestamp of the last successful telemetry push from the customer mobile app. Powers the "Last sync from Mobile App" indicator on the Connected Asset tab.</description>
    <inlineHelpText>When the customer's mobile app last delivered telemetry for this asset.</inlineHelpText>
    <type>DateTime</type>
</CustomField>