force-app/main/default/objects/Asset/fields/VBOT_Mobile_App_Enabled__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Mobile_App_Enabled__c</fullName>
    <label>Mobile App Enabled</label>
    <description>True when the customer's headless mobile app is paired with this asset and streams telemetry. Drives the Headless 360 storytelling on the Connected Asset tab.</description>
    <inlineHelpText>Indicates whether telemetry sync from the customer mobile app is active.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>