force-app/main/default/objects/Asset/fields/VBOT_Property_Size_Sqm__c.field-meta.xml
<CustomField>
    <fullName>VBOT_Property_Size_Sqm__c</fullName>
    <label>Property Size (sqm)</label>
    <description>Customer property size in square meters. Drives the upgrade-recommendation reasoning for Use Case 2 (Upgrades).</description>
    <inlineHelpText>Size of the lawn or property serviced by this asset (in m²).</inlineHelpText>
    <type>Number</type>
    <precision>7</precision>
    <scale>0</scale>
</CustomField>