force-app/main/default/objects/Asset/listViews/VBOT_Assets.listView-meta.xml
<ListView>
    <fullName>VBOT_Assets</fullName>
    <label>VBOT Assets</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.NAME</field>
        <operation>startsWith</operation>
        <value>VerdantBot</value>
    </filters>
</ListView>